--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="error_popup" translatable="false">Bad Request</string>
+    <string name="title_activity_multi_type_lazy_column">MultiTypeLazyColumn</string>
 </resources>
